--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-scroll": "^1.9.3",
     "tailwind-merge": "^3.3.1",
-    "typewriter-effect": "^2.22.0"
+    "typewriter-effect": "^2.22.0",
+    "vercel": "^44.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
