--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formspree/react": "^3.0.0",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hamburger-react": "^2.5.2",
