--- a/package.json
+++ b/package.json
@@ -1,45 +1,47 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@formspree/react": "^3.0.0",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@vercel/analytics": "^1.5.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "hamburger-react": "^2.5.2",
-    "lucide-react": "^0.525.0",
-    "next": "15.3.4",
-    "next-utils": "^0.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-fast-marquee": "^1.6.5",
-    "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0",
-    "react-scroll": "^1.9.3",
-    "tailwind-merge": "^3.3.1",
-    "typewriter-effect": "^2.22.0",
-    "vercel": "^44.4.1"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/react-scroll": "^1.8.10",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
-  }
+     "name": "portfolio",
+     "version": "0.1.0",
+     "private": true,
+     "scripts": {
+          "dev": "next dev",
+          "build": "next build",
+          "start": "next start",
+          "lint": "next lint",
+          "format": "prettier --write ."
+     },
+     "dependencies": {
+          "@formspree/react": "^3.0.0",
+          "@fortawesome/free-brands-svg-icons": "^6.7.2",
+          "@fortawesome/react-fontawesome": "^0.2.2",
+          "@vercel/analytics": "^1.5.0",
+          "class-variance-authority": "^0.7.1",
+          "clsx": "^2.1.1",
+          "hamburger-react": "^2.5.2",
+          "lucide-react": "^0.525.0",
+          "next": "15.3.4",
+          "next-utils": "^0.2.1",
+          "react": "^19.0.0",
+          "react-dom": "^19.0.0",
+          "react-fast-marquee": "^1.6.5",
+          "react-icons": "^5.5.0",
+          "react-intersection-observer": "^9.16.0",
+          "react-scroll": "^1.9.3",
+          "tailwind-merge": "^3.3.1",
+          "typewriter-effect": "^2.22.0",
+          "vercel": "^44.4.1"
+     },
+     "devDependencies": {
+          "@eslint/eslintrc": "^3",
+          "@tailwindcss/postcss": "^4",
+          "@types/node": "^20",
+          "@types/react": "^19",
+          "@types/react-dom": "^19",
+          "@types/react-scroll": "^1.8.10",
+          "eslint": "^9",
+          "eslint-config-next": "15.3.4",
+          "prettier": "^3.6.2",
+          "tailwindcss": "^4",
+          "tw-animate-css": "^1.3.4",
+          "typescript": "^5"
+     }
 }
