--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
           "clsx": "^2.1.1",
           "gsap": "^3.14.2",
           "hamburger-react": "^2.5.2",
-     "lucide-react": "^0.525.0",
-     "motion": "^12.25.0",
-     "next": "15.3.4",
-     "next-utils": "^0.2.1",
-     "react": "^19.0.0",
-     "react-dom": "^19.0.0",
-     "react-fast-marquee": "^1.6.5",
-     "react-icons": "^5.5.0",
-     "react-intersection-observer": "^9.16.0",
-     "react-scroll": "^1.9.3",
-     "resend": "^4.1.1",
-     "tailwind-merge": "^3.3.1",
-     "typewriter-effect": "^2.22.0",
-     "vercel": "^44.4.1"
+          "lucide-react": "^0.525.0",
+          "motion": "^12.25.0",
+          "next": "^16.1.6",
+          "next-utils": "^0.2.1",
+          "react": "^19.0.0",
+          "react-dom": "^19.0.0",
+          "react-fast-marquee": "^1.6.5",
+          "react-icons": "^5.5.0",
+          "react-intersection-observer": "^9.16.0",
+          "react-scroll": "^1.9.3",
+          "resend": "^4.1.1",
+          "tailwind-merge": "^3.3.1",
+          "typewriter-effect": "^2.22.0",
+          "vercel": "^44.4.1"
      },
      "devDependencies": {
           "@eslint/eslintrc": "^3",
